fixed z-index of filter menu

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -63,3 +63,7 @@
   width: 200px !important;
   right: 0px;
 }
+
+.react-tiny-popover-container {
+  z-index: 999999999999999999999 !important;
+}
